# 3dSoftwareEngine

./: CMakeLists.txt  README.md
include/: camera.h  config.h  engine.h  face.h  fastmath.h  object.h  projection.h  rasterizer.h  render.h  transform.h  vertex.h
src/: camera.c  engine.c  fastmath.c  projection.c  rasterizer.c  render.c  transform.c
